--- a/VT-Astrobotics.css
+++ b/VT-Astrobotics.css
@@ -187,12 +187,18 @@
   margin: 60px auto;
 }
 
-.u-section-3 .u-video-1 {
+.u-section-3 .u-layout-cell-1 {
   min-height: 496px;
 }
 
 .u-section-3 .u-container-layout-1 {
   padding: 0;
+}
+
+.u-section-3 .u-video-1 {
+  width: 458px;
+  height: 323px;
+  margin: 0 auto;
 }
 
 .u-section-3 .embed-responsive-1 {
@@ -231,7 +237,7 @@
     margin-left: initial;
   }
 
-  .u-section-3 .u-video-1 {
+  .u-section-3 .u-layout-cell-1 {
     background-position: 50% 50%;
     min-height: 409px;
   }
@@ -248,8 +254,15 @@
 }
 
 @media (max-width: 991px) {
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 550px;
+  }
+
   .u-section-3 .u-video-1 {
-    min-height: 313px;
+    height: 348px;
+    margin-right: initial;
+    margin-left: initial;
+    width: auto;
   }
 
   .u-section-3 .u-layout-cell-2 {
@@ -268,8 +281,8 @@
     min-height: 707px;
   }
 
-  .u-section-3 .u-video-1 {
-    min-height: 470px;
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 825px;
   }
 
   .u-section-3 .u-layout-cell-2 {
@@ -283,8 +296,15 @@
 }
 
 @media (max-width: 575px) {
+  .u-section-3 .u-layout-cell-1 {
+    min-height: 519px;
+  }
+
   .u-section-3 .u-video-1 {
-    min-height: 296px;
+    height: 340px;
+    width: auto;
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-3 .u-layout-cell-2 {
