--- a/Home.css
+++ b/Home.css
@@ -1,10 +1,13 @@
  .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url("images/curioddyseyfixingrobotlandscape.jpg");
-  background-position: 50% 100%;
+  /* background-image: linear-gradient(0deg, rgba(0,0,0,0.35), rgba(0,0,0,0.35)), url("images/curioddyseyfixingrobotlandscape.jpg"); */
+  /* background-position: 50% 100%; */
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 800px;
+  /* min-height: 850px; */
+  /* min-height: 1191px; */
+  aspect-ratio: 16/9;
+  max-width: 100%;
 }
 
 .u-section-1 .u-text-1 {
@@ -16,6 +19,10 @@
 .u-section-1 .u-text-2 {
   font-weight: 700;
   margin: 20px auto 60px;
+}
+
+.u-section-1 .embed-responsive-1 {
+  position: absolute;
 }
 
 @media (max-width: 1199px) {
